--- a/src/app/nouveau-formulaire/nouveau-formulaire.component.css
+++ b/src/app/nouveau-formulaire/nouveau-formulaire.component.css
@@ -6,3 +6,11 @@ table {
 td:hover{
   background-color: #aedd94;
 }
+
+td:hover:after {
+  content: url(../../assets/img/logo-poly-blanc.PNG);
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+}
