--- a/src/app/nouveau-formulaire/nouveau-formulaire.component.html
+++ b/src/app/nouveau-formulaire/nouveau-formulaire.component.html
@@ -1,10 +1,17 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-  <ng-container matColumnDef="Formulaires">
-    <th mat-header-cell *matHeaderCellDef> Formulaires </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+<table>
+  <tr>
+    <td class="dem-ach"> {{dataSource[0].name}} </td>
+  </tr>
+  <tr>
+    <td class="dem-pai"> {{dataSource[1].name}} </td>
+  </tr>
+  <tr>
+    <td class="aide-fin"> {{dataSource[2].name}} </td>
+  </tr>
+  <tr>
+    <td class="rap-dep"> {{dataSource[3].name}} </td>
+  </tr>
+  <tr>
+    <td class="av-voy"> {{dataSource[4].name}} </td>
+  </tr>
 </table>
