Changes table style.

--- a/src/app/nouveau-formulaire/nouveau-formulaire.component.html
+++ b/src/app/nouveau-formulaire/nouveau-formulaire.component.html
@@ -1,4 +1,7 @@
-<table>
+<table class="blueTable">
+  <tr>
+    Formulaires
+  </tr>
   <tr>
     <td class="dem-ach"> {{dataSource[0].name}} </td>
   </tr>
