Ajout tableau dynamique pour participants.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <!--<app-dashboard></app-dashboard>-->
 <!--<app-demande-achat></app-demande-achat>-->
-<app-nouveau-formulaire></app-nouveau-formulaire>
+<!--<app-nouveau-formulaire></app-nouveau-formulaire>-->
+<app-assignation></app-assignation>
