--- a/src/app/formulaires/demande-achat/demande-achat.component.html
+++ b/src/app/formulaires/demande-achat/demande-achat.component.html
@@ -258,6 +258,7 @@
           <tr mat-footer-row *matFooterRowDef="['total','addRow']"></tr>
         </table>
     </div>
+    <!-- Commentaires et precision -->
   <div class="section-rectangle">
     <h6>COMMENTAIRES ET PRÉCISIONS</h6>
     <mat-grid-list cols="1" rowHeight="4em">
@@ -268,7 +269,8 @@
       </mat-grid-tile>
     </mat-grid-list>
   </div>
-  <div class="section-rectangle">
+    <!-- Signatures -->
+    <div class="section-rectangle">
     <mat-grid-list cols="1" rowHeight="4em">
       <mat-grid-tile>
           <mat-form-field>
