--- a/src/app/assignation/assignation.component.html
+++ b/src/app/assignation/assignation.component.html
@@ -2,40 +2,28 @@
   <div>
     <table mat-table [dataSource]="dSparticipant">
       <ng-container matColumnDef="participants">
-        <th mat-header-cell *matHeaderCellDef> Participants </th>
+        <th mat-header-cell *matHeaderCellDef>Participants </th>
         <td mat-cell *matCellDef="let element">
-          <input [(ngModel)]="element.id" [ngModelOptions]="{standalone: true}">
+          <input [(ngModel)]="element.name" [ngModelOptions]="{standalone: true}">
         </td>
       </ng-container>
-
       <ng-container matColumnDef="total">
         <td mat-footer-cell *matFooterCellDef colspan="5">
           <p>Ajouter</p>
         </td>
       </ng-container>
-
       <ng-container matColumnDef="addRow">
         <td mat-footer-cell *matFooterCellDef colspan="1">
           <button mat-mini-fab color="primary"
-                  (click)="onCreate()">+</button>
+                  (click)="openDialog()">+</button>
         </td>
       </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumnsVentilation"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumnsVentilation;"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumnParticipants"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumnParticipants;"></tr>
       <tr mat-footer-row *matFooterRowDef="['total','addRow']"></tr>
     </table>
   </div>
 </div>
-<ol>
-  <li>
-    <mat-form-field>
-      <input matInput [(ngModel)]="name" placeholder="What's your name?">
-    </mat-form-field>
-  </li>
-  <li>
-    <button mat-raised-button (click)="openDialog()">Pick one</button>
-  </li>
-  <li *ngIf="animal">
-    You chose: <i>{{animal}}</i>
-  </li>
-</ol>
+<li *ngIf="participant">
+  <i *ngFor="let part of participant">{{part}}</i>
+</li>
