--- a/src/app/assignation/assignation.component.html
+++ b/src/app/assignation/assignation.component.html
@@ -1,29 +1,5 @@
 <div class="participants">
-  <div>
-    <table mat-table [dataSource]="dSparticipant">
-      <ng-container matColumnDef="participants">
-        <th mat-header-cell *matHeaderCellDef>Participants </th>
-        <td mat-cell *matCellDef="let element">
-          <input [(ngModel)]="element.name" [ngModelOptions]="{standalone: true}">
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="total">
-        <td mat-footer-cell *matFooterCellDef colspan="5">
-          <p>Ajouter</p>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="addRow">
-        <td mat-footer-cell *matFooterCellDef colspan="1">
-          <button mat-mini-fab color="primary"
-                  (click)="openDialog()">+</button>
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumnParticipants"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumnParticipants;"></tr>
-      <tr mat-footer-row *matFooterRowDef="['total','addRow']"></tr>
-    </table>
-  </div>
+  <li *ngFor="let part of participants">{{part.name}}</li>
+  <button mat-mini-fab color="primary"
+          (click)="openDialog()">+</button>
 </div>
-<li *ngIf="participant">
-  <i *ngFor="let part of participant">{{part}}</i>
-</li>
