--- a/src/app/formulaires/voyage-form/voyage-form.component.html
+++ b/src/app/formulaires/voyage-form/voyage-form.component.html
@@ -165,27 +165,34 @@
         <ng-container matColumnDef="ubr">
             <th mat-header-cell *matHeaderCellDef> UBR </th>
             <td mat-cell *matCellDef="let element">
-                  <input [(ngModel)]="element.ubr">
+                <mat-form-field>
+                    <input matInput type="text" [(ngModel)]="element.ubr">
+                </mat-form-field>
             </td>
         </ng-container>
         <ng-container matColumnDef="compte">
             <th mat-header-cell *matHeaderCellDef> COMPTE </th>
             <td mat-cell *matCellDef="let element">
-                <input [(ngModel)]="element.compte">
-          </td>
+                <mat-form-field>
+                    <input matInput type="text" [(ngModel)]="element.compte">
+                </mat-form-field>
+            </td>
         </ng-container>
         <ng-container matColumnDef="unite">
             <th mat-header-cell *matHeaderCellDef> UNITÉ <br> ADM. </th>
             <td mat-cell *matCellDef="let element">
-                <input [(ngModel)]="element.unite">
-          </td>
+                <mat-form-field>
+                    <input matInput type="text" [(ngModel)]="element.unite">
+                </mat-form-field>
+            </td>
         </ng-container>
         <ng-container matColumnDef="montant">
             <th mat-header-cell *matHeaderCellDef> MONTANT </th>
             <td mat-cell *matCellDef="let element">
-                <input [(ngModel)]="element.montant" (ngModelChange)="updateTotal()"
-                type="number">
-          </td>
+                <mat-form-field>
+                    <input matInput type="number" [(ngModel)]="element.montant" (ngModelChange)="updateTotal()">
+                </mat-form-field>
+            </td>
         </ng-container>
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef></th>
