--- a/src/app/formulaires/voyage-form/voyage-form.component.html
+++ b/src/app/formulaires/voyage-form/voyage-form.component.html
@@ -161,7 +161,7 @@
 
 <div id="ventilation-budgetaire">
   <h6>VENTILATION BUDGÉTAIRE</h6>
-  <table mat-table [dataSource]="dSventilation">  
+  <table mat-table [dataSource]="dSventilation" id="ventilation-table">  
         <ng-container matColumnDef="ubr">
             <th mat-header-cell *matHeaderCellDef> UBR </th>
             <td mat-cell *matCellDef="let element">
@@ -187,13 +187,14 @@
             </td>
         </ng-container>
         <ng-container matColumnDef="montant">
-            <th mat-header-cell *matHeaderCellDef> MONTANT </th>
-            <td mat-cell *matCellDef="let element">
+            <th mat-header-cell *matHeaderCellDef id="montant-colonne"> MONTANT </th>
+            <td mat-cell *matCellDef="let element" id="montant-cell">
                 <mat-form-field>
                     <input matInput type="number" [(ngModel)]="element.montant" (ngModelChange)="updateTotal()">
                 </mat-form-field>
             </td>
         </ng-container>
+
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
@@ -201,16 +202,18 @@
                 (click)="onDelete(element.id)">x</button>
             </td>
         </ng-container>
+
         <ng-container matColumnDef="total">
-          <td mat-footer-cell *matFooterCellDef colspan="5">
-              <p id="redTotal">TOTAL: {{ ventilationTotal | currency}}</p>
-          </td>
+            <td mat-footer-cell *matFooterCellDef colspan="4">
+                <strong id="redTotal">TOTAL: {{ ventilationTotal | currency}}</strong>
+            </td>
         </ng-container>
+        
         <ng-container matColumnDef="addRow">
-          <td mat-footer-cell *matFooterCellDef colspan="1">
-              <button mat-mini-fab color="primary"
-              (click)="onCreate()">+</button>
-          </td>
+            <td mat-footer-cell *matFooterCellDef>
+                <button mat-mini-fab color="primary"
+                (click)="onCreate()">+</button>
+            </td>
         </ng-container>
   
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -224,7 +227,7 @@
   <table width="100%" id="tableau-avances-demandees">
         <tbody>
             <tr>
-                <td>
+                <td id="avance-1">
                     <h6>1ère AVANCE</h6>
                 </td>
                 <td>
@@ -232,7 +235,7 @@
                         <input matInput type="number" [(ngModel)]="avance1" (ngModelChange)="updateAvanceTotal()">
                     </mat-form-field>
                 </td>
-                <td>
+                <td id="pour-1">
                     <h6>POUR</h6>
                 </td>
                 <td>
@@ -245,7 +248,7 @@
             </tr>
 
             <tr>
-                <td>
+                <td id="avance-2">
                     <h6>2ième AVANCE</h6>
                 </td>
                 <td>
@@ -253,7 +256,7 @@
                         <input matInput type="number" [(ngModel)]="avance2" (ngModelChange)="updateAvanceTotal()">
                     </mat-form-field>
                 </td>
-                <td>
+                <td id="pour-2">
                     <h6>POUR</h6>
                 </td>
                 <td>
@@ -266,11 +269,11 @@
             </tr>
 
             <tr>
-                <td>
+                <td id="avances-total">
                     <h6>TOTAL</h6>
                 </td>
-                <td>
-                    <p id="redTotal">{{ avanceTotal | currency }}</p>
+                <td id="avances-total-cell">
+                    <strong id="avances-total-value">{{ avanceTotal | currency }}</strong>
                 </td>
             </tr>
         </tbody>
