--- a/src/app/formulaires/voyage-form/voyage-form.component.html
+++ b/src/app/formulaires/voyage-form/voyage-form.component.html
@@ -228,7 +228,7 @@
         <tbody>
             <tr>
                 <td id="avance-1">
-                    <h6>1ère AVANCE</h6>
+                    <h6>1<sup>ère</sup> AVANCE</h6>
                 </td>
                 <td>
                     <mat-form-field>
@@ -249,7 +249,7 @@
 
             <tr>
                 <td id="avance-2">
-                    <h6>2ième AVANCE</h6>
+                    <h6>2<sup>ième</sup> AVANCE</h6>
                 </td>
                 <td>
                     <mat-form-field>
