--- a/src/app/formulaires/voyage-form/voyage-form.component.css
+++ b/src/app/formulaires/voyage-form/voyage-form.component.css
@@ -102,7 +102,15 @@ mat-form-field {
     padding: 10px 0px 0px 5px;
 }
 
-#tableau-estimation-depenses,
+#tableau-estimation-depenses {
+    border-collapse: collapse; 
+    border: 1px solid black;
+    margin-bottom: 1%;
+    margin-left: 5%;
+    margin-right: 5%;
+    table-layout: fixed;
+    width: 90%;
+}
 #tableau-avances-demandees {
     border-collapse: collapse; 
     border:1px solid black;
@@ -176,6 +184,7 @@ input {
     text-align: center;
 }
 
+#estimation-total,
 #avances-total-value {
     color: red;
     text-align: center;
