Rajout de P et F pour le nom de champ matricule
À voir si ok (suffisant)

--- a/src/app/formulaires/voyage-form/voyage-form.component.html
+++ b/src/app/formulaires/voyage-form/voyage-form.component.html
@@ -13,11 +13,11 @@
 <div id="entite-externe">
   <h6>ENTITÉ EXTERNE</h6>
   <mat-form-field>
-      <input matInput type="text" placeholder="EMPLOYÉ (matricule)">
+      <input matInput type="text" placeholder="EMPLOYÉ (matricule) P">
   </mat-form-field>
   <br>
   <mat-form-field>
-      <input matInput type="text" placeholder="FOURNISSEUR (numéro)">
+      <input matInput type="text" placeholder="FOURNISSEUR (numéro) F">
   </mat-form-field>
 
   <mat-form-field>
