préfixe bonne pratique pour le matricule

--- a/src/app/formulaires/voyage-form/voyage-form.component.html
+++ b/src/app/formulaires/voyage-form/voyage-form.component.html
@@ -13,11 +13,13 @@
 <div id="entite-externe">
   <h6>ENTITÉ EXTERNE</h6>
   <mat-form-field>
-      <input matInput type="text" placeholder="EMPLOYÉ (matricule) P">
+      <span matPrefix>P &nbsp;</span>
+      <input matInput type="text" placeholder="EMPLOYÉ (matricule)">
   </mat-form-field>
   <br>
   <mat-form-field>
-      <input matInput type="text" placeholder="FOURNISSEUR (numéro) F">
+      <span matPrefix>F &nbsp;</span>
+      <input matInput type="text" placeholder="FOURNISSEUR (numéro)">
   </mat-form-field>
 
   <mat-form-field>
