Vincent fait dire: navbar fixed!!!!

--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" *ngIf="isLoggedIn$ | async as isLoggedIn" id="toolbar">
+<mat-toolbar color="primary" *ngIf="currentUser" id="toolbar">
     
     <span id="bar"><img src="assets/img/logo-poly.PNG"></span>
     <div id="navbar-links" >
